[package]
name = "libdx"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
description = "Stuff that should probably already be a part of Rust."
homepage = "https://sparklet.org/libdx/"
repository = "https://github.com/Lamby777/libdx-rs/"
keywords = ["utilities", "utils", "libdx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
